fixed spacing on all pages

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,6 @@ h2 {
 
 .page-container{
   padding-top: 15vh;
-  padding-bottom: 15vh;
   max-width: 70vw;
   margin: auto;
 }
@@ -88,7 +87,6 @@ h2 {
   flex-direction: column;
   justify-content: top;
 }
-
 
 
 
@@ -138,7 +136,12 @@ h2 {
   50% { border-color: #02131D; }
 }
 
-
+.home-container{
+  padding-top: 35vh;
+  padding-bottom: 20vh;
+  max-width: 70vw;
+  margin: auto;
+}
 
 
 
